# ot-harjoitustyo

./: README.md  pyproject.toml
dokumentaatio/: vaatimusmäärittely.md
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/: .gitignore
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: hsl-sekvenssikaavio.md  luokkakaavio.md  machine-sekvenssikaavio.md  tmp.md
tween-animation-app/: .coveragerc  .gitignore  pyproject.toml  tasks.py
tween-animation-app/dokumentaatio/: arkkitehtuuri.md  changelog.md  työaikakirjanpito.txt  vaatimusmäärittely.md
tween-animation-app/src/: animation.py  animation_player.py  animator.py  canvas.py  index.py  toolbar.py  ui.py
tween-animation-app/src/tests/: animation_handler_test.py  animation_test.py  animator_test.py  drawable_test.py  scheduled_test.py  tweens_test.py
tween-animation-app/src/ui/: __init__.py  animation_control.py  animation_player_adapter.py  setting_factory.py
