[tool.poetry]
name = "Tween Animation App"
version = "0.1.0"
description = "Create tween animations for shapes"
authors = ["Peikkohi <peik.kalliokoski@helsinki.fi>"]

[tool.poetry.dependencies]
python = "^3.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
