[tool.poetry]
name = "Tween Animation App"
version = "0.1.0"
description = "Create tween animations for shapes"
authors = ["Peikkohi <peik.kalliokoski@helsinki.fi>"]

[tool.poetry.dependencies]
python = "^3.8"
invoke = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
coverage = "^7.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
